# jaffle-shop-mdpi

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  .uv  README.md  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml
.github/workflows/: lint.yml
docker/init/: 01-init-schemas.sql
models/: sources.yml
models/marts/: model_1.sql  model_2.sql  model_3.sql  model_4.sql  model_5.sql  models.yml
models/staging/: models.yml  orders_items_view.sql
